fixed photo attribution for legibility

--- a/client/main.css
+++ b/client/main.css
@@ -321,7 +321,8 @@ legend {
       }
 
 
-@media (max-width: 770px){
+@media (max-width: 640px){
+                  /*640px chosen because it is the width of iPhone 5s*/
 
         #main-content-container{
 
@@ -365,6 +366,11 @@ legend {
     left: 10px;
 
     color:white;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
     font-size: 10px;
 }
 
